--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "prisma": "^5.6.0",
     "reflect-metadata": "^0.1.13",
     "run-script-webpack-plugin": "^0.2.0",
     "rxjs": "^7.8.1",
